--- a/space-tourism/src/pages/Crew/Components/CrewCard/CrewCard.module.scss
+++ b/space-tourism/src/pages/Crew/Components/CrewCard/CrewCard.module.scss
@@ -1,234 +1,223 @@
 .cardContainer {
-    .crewInfo {
-        .infoText {
-            .role {
-                font-family: $heading-big-simple;
-                color: rgba($color: $white, $alpha: .5);
-                text-transform: uppercase;
-                font-weight: 400;
-            }
+  .crewInfo {
+    .infoText {
+      .role,
+      .name {
+        font-family: $heading-big-simple;
+        text-transform: uppercase;
+        font-weight: 400;
+      }
 
-            .name {
-                font-family: $heading-big-simple;
-                color: $white;
-                text-transform: uppercase;
-                font-weight: 400;
-            }
+      .role {
+        color: rgba($color: $white, $alpha: 0.5);
+      }
 
-            .bio {
-                font-family: $heading-sm-simple;
-                color: $ice;
-            }
+      .name {
+        color: $white;
+      }
+
+      .bio {
+        font-family: $heading-sm-simple;
+        color: $ice;
+      }
+    }
+  }
+
+  .tabs {
+    display: flex;
+    .tabsButton {
+      border-radius: 99px;
+      color: $white;
+      background-color: rgba($color: $white, $alpha: 0.17);
+      transition: background-color 0.3s ease;
+      width: 10px;
+      height: 10px;
+
+      &.active {
+        background-color: rgba($color: $white, $alpha: 1);
+
+        &:hover {
+          background-color: rgba($color: $white, $alpha: 1);
         }
+      }
+
+      &:hover {
+        background-color: rgba($color: $white, $alpha: 0.5);
+      }
+    }
+  }
+
+  .wrapper {
+    position: relative;
+    display: inline-block;
+    overflow: hidden;
+
+    img {
+      display: block;
+      width: 100%;
+      height: auto;
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 10%;
+      background: linear-gradient(to top, $dark-blue, transparent);
+      pointer-events: none;
+      border-radius: 30px;
+    }
+  }
+
+  // MOBILE
+  @include breakpoint-max($max-mobile) {
+    text-align: center;
+    @include flex-column;
+    height: 100%;
+    gap: 2rem;
+
+    .crewInfo {
+      @include flex-column;
+      gap: 24px;
+    }
+
+    .infoText {
+      padding: 2rem 0;
+      @include flex-column;
+      gap: 24px;
+    }
+
+    .imageContainer {
+      display: flex;
+      justify-content: center;
+
+      .crewImg {
+        max-height: 340px;
+        max-width: 270px;
+      }
+    }
+
+    .role {
+      font-size: 1.125rem;
+    }
+
+    .name {
+      font-size: 1.5rem;
+    }
+
+    .bio {
+      font-size: 0.938rem;
+      line-height: 180%;
     }
 
     .tabs {
-        display: flex;
-        .tabsButton {
-            border-radius: 99px;
-            color: $white;
-            background-color: rgba($color: $white, $alpha: .17);
-            transition: background-color 0.3s ease;
-            width: 10px;
-            height: 10px;
+      justify-content: center;
+      gap: 1rem;
+    }
+  }
 
-            &.active {
-                background-color: rgba($color: $white, $alpha: 1);
+  // TABLET
+  @include breakpoint-min-max($min-tablet, $max-tablet) {
+    text-align: center;
+    @include flex-column;
+    height: 100%;
+    gap: 2rem;
 
-                &:hover {
-                    background-color: rgba($color: $white, $alpha: 1);
-                }
-            }
-
-            &:hover {
-                background-color: rgba($color: $white, $alpha: .5);
-            }
-        }
+    .crewInfo {
+      @include flex-column;
+      gap: 24px;
     }
 
-    .wrapper {
-        position: relative;
-        display: inline-block;
-        overflow: hidden;
-
-        img {
-            display: block;
-            width: 100%;
-            height: auto;
-        }
-
-        &::after {
-            content: '';
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            height: 10%;
-            background: linear-gradient(to top, $dark-blue, transparent);
-            pointer-events: none;
-            border-radius: 30px;
-        }
+    .infoText {
+      padding: 2rem 4rem;
+      @include flex-column;
+      gap: 24px;
     }
 
-    @include breakpoint-max($max-mobile) {
-        text-align: center;
-        @include flex-column;
-        height: 100%;
-        gap: 2rem;
+    .imageContainer {
+      display: flex;
+      justify-content: center;
 
-        .crewInfo {
-            @include flex-column;
-            gap: 24px;
-        }
-
-        .infoText {
-            padding: 2rem 0;
-            @include flex-column;
-            gap: 24px;
-        }
-
-        .imageContainer {
-            display: flex;
-            justify-content: center;
-
-            .crewImg {
-                max-height: 340px;
-                max-width: 270px;
-            }
-        }
-
-        .role {
-            font-size: 1.125rem;
-            letter-spacing: 0px;
-            line-height: auto;
-        }
-
-        .name {
-            font-size: 1.5rem;
-            letter-spacing: 0px;
-            line-height: auto;
-        }
-
-        .bio {
-            font-size: 0.938rem;
-            letter-spacing: 0px;
-            line-height: 180%;
-        }
-
-        .tabs {
-            justify-content: center;
-            gap: 1rem;
-        }
+      .crewImg {
+        max-height: 560px;
+        max-width: 446px;
+      }
     }
 
-    @include breakpoint-min-max($min-tablet, $max-tablet) {
-        text-align: center;
-        @include flex-column;
-        height: 100%;
-        gap: 2rem;
-
-        .crewInfo {
-            @include flex-column;
-            gap: 24px;
-        }
-
-        .infoText {
-            padding: 2rem 4rem;
-            @include flex-column;
-            gap: 24px;
-        }
-
-        .imageContainer {
-            display: flex;
-            justify-content: center;
-
-            .crewImg {
-                max-height: 560px;
-                max-width: 446px;
-            }
-        }
-
-        .role {
-            font-size: 1.5rem;
-            letter-spacing: 0px;
-            line-height: auto;
-        }
-
-        .name {
-            font-size: 2.5rem;
-            letter-spacing: 0px;
-            line-height: auto;
-        }
-
-        .bio {
-            font-size: 1rem;
-            letter-spacing: 0px;
-            line-height: 180%;
-        }
-
-        .tabs {
-            justify-content: center;
-            gap: 1rem;
-        }
+    .role {
+      font-size: 1.5rem;
     }
 
-    @include breakpoint-min($min-desktop) {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        height: 100%;
-        align-content: center;
-        gap: 2rem;
-
-        .crewInfo {
-            @include flex-column;
-            gap: 40px;
-        }
-
-        .infoText {
-            @include flex-column;
-            gap: 24px;
-            flex: 1;
-            justify-content: center;
-        }
-
-        .imageContainer {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-
-            .crewImg {
-                max-height: 676px;
-                max-width: 539px;
-            }
-        }
-
-        .role {
-            font-size: 2rem;
-            letter-spacing: 0px;
-            line-height: auto;
-        }
-
-        .name {
-            font-size: 3.5rem;
-            letter-spacing: 0px;
-            line-height: auto;
-        }
-
-        .bio {
-            font-size: 1.125rem;
-            letter-spacing: 0px;
-            line-height: 180%;
-        }
-
-        .tabs {
-            justify-content: center;
-            gap: 40px;
-            padding-bottom: 3rem;
-
-            .tabsButton {
-                width: 15px;
-                height: 15px;
-            }
-        }
+    .name {
+      font-size: 2.5rem;
     }
+
+    .bio {
+      font-size: 1rem;
+      line-height: 180%;
+    }
+
+    .tabs {
+      justify-content: center;
+      gap: 1rem;
+    }
+  }
+
+  // DESKTOP
+  @include breakpoint-min($min-desktop) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    height: 100%;
+    align-content: center;
+    gap: 2rem;
+
+    .crewInfo {
+      @include flex-column;
+      gap: 40px;
+    }
+
+    .infoText {
+      @include flex-column;
+      gap: 24px;
+      flex: 1;
+      justify-content: center;
+    }
+
+    .imageContainer {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      .crewImg {
+        max-height: 676px;
+        max-width: 539px;
+      }
+    }
+
+    .role {
+      font-size: 2rem;
+    }
+
+    .name {
+      font-size: 3.5rem;
+    }
+
+    .bio {
+      font-size: 1.125rem;
+      line-height: 180%;
+    }
+
+    .tabs {
+      justify-content: center;
+      gap: 40px;
+      padding-bottom: 3rem;
+
+      .tabsButton {
+        width: 15px;
+        height: 15px;
+      }
+    }
+  }
 }
